--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
   "bugs": {
     "url": "https://github.com/Garyhjj/task-layer/issues"
   },
-  "homepage": "https://github.com/Garyhjj/task-layer#readme"
+  "homepage": "https://github.com/Garyhjj/task-layer/blob/master/README.md"
 }
